Set up a redirect to aqeelaadam.com

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Redirecting</title>
+		<meta charset="UTF-8" />
+		<meta http-equiv="refresh" content="delay_time; URL=https://www.aqeelaadam.com" />
+	</head>
+	<body>
+		<p>This page has been moved. If you are not redirected within 3 seconds, click <a href="https://www.aqeelaadam.com/">here</a>.</p>
+	</body>
+</html>
